--- a/views/electionDetailsPage.ejs
+++ b/views/electionDetailsPage.ejs
@@ -11,23 +11,12 @@
   <body>
     <div class="grid grid-cols-6 pt-5">
         <div class="col-start-2 col-span-2">
-
+            <h1 class="text-2xl font-semibold text-gray-600"><%=election.title%></h1>
       <div>
-        <p class="py-2">Welcome <%=admin.firstName%> <%=admin.lastName%></p>
-        <div>
-          <%if(elections.length == 0){%>
-            <p>You haven't created any elections</p>
-            <%}%>
-            <p>You have created <%=elections.length%> elections</p>
-        </div>
-        <div>
-          <%for(var i=0;i<elections.length;i++){%>
-            <p><%=elections[i].title%></p>
-            <%}%>
-        </div>
-        <a href="/elections/new" class="text-green-600">Create new election</a>
+       
       </div>
       </div>
     </div>
   </body>
 </html>
+
