--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -22,7 +22,7 @@
         </div>
         <div>
           <%for(var i=0;i<elections.length;i++){%>
-            <p><%=elections[i].title%></p>
+            <a href="/elections/<%=elections[i].id%>" class="text-vlue-600"><%=elections[i].title%></a>
             <%}%>
         </div>
         <a href="/elections/new" class="text-green-600">Create new election</a>
