--- a/views/listQuestions.ejs
+++ b/views/listQuestions.ejs
@@ -12,20 +12,9 @@
     <div class="grid grid-cols-6 pt-5">
         <div class="col-start-2 col-span-2">
             <h1 class="text-2xl font-semibold text-gray-600"><%=election.title%></h1>
+            <p><%questions.length%></p>
       <div>
-       <div>
-       <% if(questions.length==0){%>
-          <p>You haven't created any questions</p>
-        <%}%>
-        <p>You have created <%=questions.length%></p>
-
-       </div>
-       <div>
-        <%for(var i=0;i<questions.length;i++){%>
-          <a href="/questions/<%=questions[i].id%>" class="text-vlue-600"><%=questions[i].title%></a>
-          <%}%>
-       </div>
-       <a href="/elections/<%=election.id%>/questions" class="text-green-600">Manage questions</a>
+        <a href="/elections/<%=election.id%>/questions/new" class="text-green-600">Create questions</a>
 
       </div>
       </div>
