added answer models and associations

--- a/views/questionDetailsPage.ejs
+++ b/views/questionDetailsPage.ejs
@@ -18,8 +18,14 @@
        </div>
        <div>
        </div>
-       <a href="/elections/<%=election.id%>/questions" class="text-green-600">Manage questions</a>
-      </div>
+       <form method="post" action="/answers/createAnswers">
+        <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
+        <div class="p-3">
+            <input type="text" name="title" class="border border-gray-300 text-gray-900 rounded p-2 w-full"/>
+            <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Submit</button>
+
+        </div>
+    </form>      </div>
       </div>
     </div>
   </body>
