--- a/views/questionDetailsPage.ejs
+++ b/views/questionDetailsPage.ejs
@@ -11,7 +11,6 @@
   <body>
     <div class="grid grid-cols-6 pt-5">
         <div class="col-start-2 col-span-2">
-            <h1 class="text-2xl font-semibold text-gray-600">Question <%=question.id%></h1>
       <div>
        <div>
         <p>You have created answers</p>
@@ -20,8 +19,10 @@
        </div>
        <form method="post" action="/answers/createAnswers">
         <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
+        <input type="hidden" name="questionId" value="<%=question.id%>"/>
+
         <div class="p-3">
-            <input type="text" name="title" class="border border-gray-300 text-gray-900 rounded p-2 w-full"/>
+            <input type="text" name="content" class="border border-gray-300 text-gray-900 rounded p-2 w-full"/>
             <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Submit</button>
 
         </div>
