--- a/views/electionDetailsPage.ejs
+++ b/views/electionDetailsPage.ejs
@@ -11,22 +11,32 @@
   <body>
     <div class="grid grid-cols-6 pt-5">
         <div class="col-start-2 col-span-2">
-            <h1 class="text-2xl font-semibold text-gray-600"><%=election.title%></h1>
+            <h1 class="text-2xl font-bold text-gray-600"><%=election.title%></h1>
       <div>
        <div>
        <% if(questions.length==0){%>
           <p>You haven't created any questions</p>
         <%}%>
         <% if(questions.length > 0){%>
-          <p>You have created <%=questions.length%> questions</p>
+          <p>Your election has <%=questions.length%> questions in the ballot</p>
           <%}%>
        </div>
        <div>
         <%for(var i=0;i<questions.length;i++){%>
-          <a href="/questions/<%=questions[i].id%>" class="text-vlue-600"><%=questions[i].title%></a>
+          <a href="/questions/<%=questions[i].id%>" class="text-blue-600 block"><%=questions[i].title%></a>
           <%}%>
        </div>
-       <a href="/elections/<%=election.id%>/questions" class="text-green-600">Manage questions</a>
+       <a href="/elections/<%=election.id%>/questions" class="text-green-600 block">Manage questions</a>
+       <div>
+        <% if(voters.length==0){%>
+           <p>You haven't created any voters</p>
+         <%}%>
+         <% if(voters.length > 0){%>
+           <p>Your election has <%=voters.length%> registered voters</p>
+           <%}%>
+        </div>
+       <a href="/elections/<%=election.id%>/voters" class="text-green-600 block">Manage Voters</a>
+       <a href="/launch" class="text-green-600 block">Launch election</a>
 
       </div>
       </div>
