--- a/views/listQuestions.ejs
+++ b/views/listQuestions.ejs
@@ -12,8 +12,14 @@
     <div class="grid grid-cols-6 pt-5">
         <div class="col-start-2 col-span-2">
             <h1 class="text-2xl font-semibold text-gray-600"><%=election.title%></h1>
-            <p><%questions.length%></p>
-      <div>
+            <div>
+              <% if(questions.length==0){%>
+                 <p>You haven't created any questions</p>
+               <%}%>
+               <% if(questions.length > 0){%>
+                 <p>Your election has <%=questions.length%> questions in the ballot</p>
+                 <%}%>
+              </div>      <div>
         <a href="/elections/<%=election.id%>/questions/new" class="text-green-600">Create questions</a>
 
       </div>
