--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
         <div class="col-start-2 col-span-2">
             <%- include('header.ejs')%>
             <h6 class="py-6">Sign-up as a new user</h6>
-            <form action="/admins/signup" method="post">
+            <form action="/users" method="post">
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
                 <div class="py-3">
                     <label for="firstName">First Name</label>
