--- a/views/listQuestions.ejs
+++ b/views/listQuestions.ejs
@@ -19,7 +19,13 @@
                <% if(questions.length > 0){%>
                  <p>Your election has <%=questions.length%> questions in the ballot</p>
                  <%}%>
-              </div>      <div>
+              </div>  
+              <ul class=" list-disc">
+                <%for(var i=0;i<questions.length;i++){%>
+                 <li class="ml-8"><a href="/questions/<%=questions[i].id%>" class="text-blue-600 block"><%=questions[i].title%></a></li> 
+                  <%}%>
+               </ul class="">
+                  <div>
         <a href="/elections/<%=election.id%>/questions/new" class="text-green-600">Create questions</a>
 
       </div>
