--- a/views/questionDetailsPage.ejs
+++ b/views/questionDetailsPage.ejs
@@ -9,10 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="grid grid-cols-6 pt-5">
+    <div class="grid grid-cols-6 pt-5 mt-5">
         <div class="col-start-2 col-span-2">
       <div>
-        <p><%=question.title%></p>
+        <p class="text-2xl font-bold text-gray-600"><%=question.title%></p>
        
         <div>
           <% if(answers.length > 0){%>
@@ -24,17 +24,18 @@
         <input type="hidden" name="questionId" value="<%=question.id%>"/>
 
         <div class="p-3">
-            <input type="text" name="content" class="border border-gray-300 text-gray-900 rounded p-2 "/>
+            <input type="text" name="content" class="border border-gray-300 text-gray-900 rounded p-2 " placeholder="Answer"/>
             <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 mt-5">Add</button>
 
         </div>
     </form>      </div>
     <div>
-      <p>Answer Options</p>
-     
- <%for(var i=0;i<answers.length;i++){%>
-  <p class="text-vlue-600"><%=answers[i].content%></p>
-  <%}%>
+      <p class="text-xl font-bold">Answer Options</p>
+     <ul class="list-disc">
+      <%for(var i=0;i<answers.length;i++){%>
+        <li class="text-blue-600 ml-5"><%=answers[i].content%></li>
+        <%}%>     </ul>
+
      </div>
       </div>
     </div>
