--- a/views/createElections.ejs
+++ b/views/createElections.ejs
@@ -8,10 +8,17 @@
     <title><%=title%></title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+
   <body>
     <div class="grid grid-cols-6 pt-5">
         <div class="col-start-2 col-span-2">
-
+          <%
+          var data=[
+    {label:"Home",url:"/elections",current:false},
+    {label:"Create new election",url:"/elections/new",current:true}
+    ]
+          %>
+          <%- include('navigation.ejs',{data:data})%>
             <h1 class="text-gray-600 text-2xl font-semibold">Create new election</h1>
             <form method="post" action="/elections/createElection">
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
