--- a/views/displayVoters.ejs
+++ b/views/displayVoters.ejs
@@ -11,6 +11,15 @@
   <body>
     <div class="grid pt-5 mt-5">
         <div class="col-start-2 col-span-2">
+          <%
+          var data=[
+    {label:"Home",url:"/elections",current:false},
+    {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
+    {label:`Voters`,url:`/elections/${election.id}/voters`,current:true},
+
+    ]
+          %>
+          <%- include('navigation.ejs',{data:data})%>
       <div>
         <h1 class="text-2xl font-bold text-gray-600"><%=election.title%></h1>
         <div>
