--- a/views/electionDetailsPage.ejs
+++ b/views/electionDetailsPage.ejs
@@ -29,6 +29,12 @@
   <body>
     <div class="grid grid-cols-6 pt-5 mt-5">
         <div class="col-start-2 col-span-2">
+          <%
+          var data=[
+    {label:"Home",url:"/elections",current:false},
+    {label:`${election.title}`,url:`/elections/${election.id}`,current:true}
+    ]%>
+          <%- include('navigation.ejs',{data:data})%>
             <h1 class="text-2xl font-bold text-gray-600"><%=election.title%></h1>
       <div>
         
