--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -7,11 +7,18 @@
     <meta name="csrf-token" content="<%= csrfToken %>" />
     <title><%=title%></title>
     <script src="https://cdn.tailwindcss.com"></script>
+   
   </head>
   <body>
     <div class="grid grid-cols-6 pt-5">
         <div class="col-start-2 col-span-2">
-
+          <%
+          var data=[
+      {label:"Home",url:"/elections",current:true}
+      ]
+          %>
+          <%- include('navigation.ejs',{data:data})%>
+          <a href="/signout" class="text-green-600">Sign Out</a>
       <div>
         <p class="py-2 text-xl font-bold text-gray-500">Welcome <%=admin.firstName%> <%=admin.lastName%></p>
         <div>
