--- a/views/listQuestions.ejs
+++ b/views/listQuestions.ejs
@@ -9,8 +9,18 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="grid grid-cols-6 pt-5">
+    <div class="grid grid-cols-6 pt-5 mt-5">
         <div class="col-start-2 col-span-2">
+          <%
+          var data=[
+    {label:"Home",url:"/elections",current:false},
+    {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
+    {label:`Questions`,url:`/elections/${election.id}/questions`,current:true},
+
+    ]
+          %>
+          <%- include('navigation.ejs',{data:data})%>
+
             <h1 class="text-2xl font-semibold text-gray-600"><%=election.title%></h1>
             <div>
               <% if(questions.length==0){%>
