--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     <title><%= title %> </title>
 <body>
   
-    <div class="grid grid-cols-6">
+    <div class="grid grid-cols-6 mt-5">
         <div class="col-start-2 col-span-2">
             <%- include('header.ejs')%>
             <h6 class="py-6">Sign-In</h6>
