--- a/views/createElections.ejs
+++ b/views/createElections.ejs
@@ -30,6 +30,7 @@
                     <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Submit</button>
                 </div>
             </form>
+            <%-include("errorMsg.ejs")%>
       </div>
     </div>
   </body>
