--- a/views/createElections.ejs
+++ b/views/createElections.ejs
@@ -10,28 +10,36 @@
   </head>
 
   <body>
-    <div class="grid grid-cols-6 pt-5">
-        <div class="col-start-2 col-span-2">
+    <main class=" h-screen" style="background-color: #6c6c7f24; ">
+      <%-include('header.ejs',{admin:admin})%>
+        <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
+          style=" margin: 30px auto; height: 75%; width: 65%;">
+          <div class="mx-auto">
           <%
           var data=[
     {label:"Home",url:"/elections",current:false},
-    {label:"Create new election",url:"/elections/new",current:true}
+    {label:"Create new election",url:"/elections/createElections/new",current:true}
     ]
           %>
           <%- include('navigation.ejs',{data:data})%>
-            <h1 class="text-gray-600 text-2xl font-semibold">Create new election</h1>
+          <div class="p-8 mx-auto flex flex-col align-center justify-center" style="width: 500px;" >
+            <h1 class="text-gray-600 text-2xl font-semibold text-center">Create new election</h1>
             <form method="post" action="/elections/createElection">
                 <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
                 <div class="p-3">
-                    <label for="title" class="text-gray-900 text-xl py-2">What's your election's name?</label>
-                    <input type="text" name="title" class="border border-gray-300 text-gray-900 rounded p-2 w-full"/>
+                    <label for="title" class="text-gray-900 text-lg py-2">What's your election's name?</label>
+                    <input type="text" name="title" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
                 </div>
                 <div class="p-3">
-                    <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Submit</button>
+                    <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 w-full">Submit</button>
                 </div>
             </form>
             <%-include("errorMsg.ejs")%>
+          </div>
+           
       </div>
     </div>
+    
+    </main>
   </body>
 </html>
