--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -1,44 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="csrf-token" content="<%= csrfToken %>" />
-    <title><%=title%></title>
-    <script src="https://cdn.tailwindcss.com"></script>
-   
-  </head>
-  <body>
-    <div class="grid grid-cols-6 pt-5">
-        <div class="col-start-2 col-span-2">
-          <%
-          var data=[
-      {label:"Home",url:"/elections",current:true}
-      ]
-          %>
-          <%- include('navigation.ejs',{data:data})%>
-          <a href="/signout" class="text-green-600">Sign Out</a>
-      <div>
-        <p class="py-2 text-xl font-bold text-gray-500">Welcome <%=admin.firstName%> <%=admin.lastName%></p>
-        <div>
-          <%if(elections.length == 0){%>
-            <p>You haven't created any elections</p>
-            <%}%>
-            <%if(elections.length > 0){%>
-              <p>You have created <%=elections.length%> elections</p>
-              <%}%>
-          
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="csrf-token" content="<%= csrfToken %>" />
+  <title>
+    <%=title%>
+  </title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    tr:nth-child(even) {
+      background: rgb(204 204 204 / 20%);
+    }
+
+    tr:hover {
+      background: #c2c2c278;
+    }
+  </style>
+  <script>
+    var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
+    var currentId;
+    function updateElection(id, title) {
+      fetch(`/elections/${id}`, {
+        method: 'put',
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          title,
+          _csrf: token
+        })
+      }).then((res) => {
+        if (res.ok) {
+          window.location.reload();
+        }
+      }).catch((err) => console.log(err))
+    }
+    function deleteElection(id) {
+      fetch(`/elections/${id}`, {
+        method: 'delete',
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          _csrf: token
+        })
+      }).then((res) => {
+        if (res.ok) {
+          window.location.reload();
+        }
+      }).catch((err) => console.log(err))
+    }
+  </script>
+</head>
+
+<body>
+  <main class=" h-full pb-5" style="background-color: #6c6c7f24; ">
+    <%-include('header.ejs',{admin:admin})%>
+      <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
+        style=" margin: 30px auto; height: 75%; width: 75%;">
+        <div class="mx-auto">
+          <% var data=[ {label:"Home",url:"/elections",current:true} ] %>
+            <%- include('navigation.ejs',{data:data})%>
+              <div class="flex justify-between">
+                <p class="py-2 text-2xl font-bold text-gray-500">Welcome <%=admin.firstName%>
+                    <%=admin.lastName%>
+                </p>
+                <div class="p-2 bg-green-600 rounded hover:bg-green-500">
+                  <a href="/elections/createElections/new" class="text-white">Create new election</a>
+                </div>
+
+              </div>
+              <div>
+                <%if(elections.length==0){%>
+                  <p class="text-lg">You haven't created any elections</p>
+                  <%}%>
+                    <%if(elections.length> 0){%>
+                      <p class="text-lg">You have created <%=elections.length%> elections</p>
+                      <%}%>
+
+              </div>
+              <%if(elections.length> 0){%>
+                <table class="text-left w-full mt-5">
+                  <thead class="bg-black flex text-white w-full" style="background-color: black;">
+                    <tr class="flex w-full mb-4">
+                      <th class='px-4 py-2 w-1/4 text'>No.</th>
+                      <th class='px-4 py-2 w-1/3 '>Election Name</th>
+                      <th class='px-4 py-2 w-1/4'>Actions</th>
+                    </tr>
+                  </thead>
+                  <!-- Remove the nasty inline CSS fixed height on production and replace it with a CSS class — this is just for demonstration purposes! -->
+                  <tbody class="bg-grey-light flex flex-col items-center justify-between overflow-y-scroll w-full"
+                    style="height: 50vh;">
+                    <%for(var i=0;i<elections.length;i++){%>
+
+                      <tr class="flex w-full mb-4">
+                        <td class="p-4 w-1/4">
+                          <%=i+1%>
+                        </td>
+                        <td class="p-4 w-1/3">
+                          <a href="/elections/<%=elections[i].id%>" class="text-blue-600 ">
+                            <%=elections[i].title%>
+                          </a>
+                        </td>
+                        <td class="p-4 w-1/4">
+                          <div class="flex justify-between">
+                            <button data-modal-target="authentication-modal" data-modal-toggle="authentication-modal">
+                              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-5 h-6 stroke-green-600">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                              </svg></button>
+                            <a href='' onclick="deleteElection('<%=elections[i].id%>')">
+                              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-5 h-6 stroke-red-600">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                              </svg>
+                            </a>
+
+                          </div>
+                        </td>
+
+                      </tr>
+
+                      <%}%>
+                  </tbody>
+                </table>
+                <%}%>
+                  <!-- Todo work on passing the id to the modal -->
+                  <div id="popup-modal" tabindex="-1"
+                    class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full">
+                    <div class="relative w-full h-full max-w-md md:h-auto">
+                      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                        <button type="button"
+                          class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white"
+                          data-modal-hide="popup-modal">
+                          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                              clip-rule="evenodd"></path>
+                          </svg>
+                          <span class="sr-only">Close modal</span>
+                        </button>
+                        <div class="p-6 text-center">
+                          <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200"
+                            fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                          </svg>
+                          <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to
+                            delete this product?</h3>
+                          <button data-modal-hide="popup-modal" type="button"
+                            class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                            Yes, I'm sure
+                          </button>
+                          <button data-modal-hide="popup-modal" type="button"
+                            class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">No,
+                            cancel</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- update popup -->
+
+                  <!-- Main modal -->
+                  <div id="authentication-modal" tabindex="-1" aria-hidden="true"
+                    class="fixed top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-modal md:h-full">
+                    <div class="relative w-full h-full max-w-md md:h-auto">
+                      <!-- Modal content -->
+                      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                        <button type="button"
+                          class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white"
+                          data-modal-hide="authentication-modal">
+                          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                              clip-rule="evenodd"></path>
+                          </svg>
+                          <span class="sr-only">Close modal</span>
+                        </button>
+                        <div class="px-6 py-6 lg:px-8">
+                          <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Edit Election</h3>
+                          <form class="space-y-6" action="#">
+                            <div>
+                              <label for="title"
+                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Title</label>
+                              <input type="text" name="title" id="title"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                                placeholder="name@company.com" required>
+                            </div>
+
+                            <button type="submit"
+                              class="w-full text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Submit</button>
+
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
         </div>
-        <ul class="list-disc">
-          <%for(var i=0;i<elections.length;i++){%>
-            <li class="ml-5"><a href="/elections/<%=elections[i].id%>" class="text-blue-600 block"><%=elections[i].title%></a></li>
-            <%}%>
-            
-        </ul>
-        <a href="/elections/new" class="text-green-600">Create new election</a>
       </div>
-      </div>
-    </div>
-  </body>
+  </main>
+</body>
+
 </html>
