--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,2 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.1/flowbite.min.css"  rel="stylesheet" />
+<style>
+  .sticky {
+  top: 0;
+  width: 100%;
 
-<h1 class="text-2xl font-semibold text-gray-600">My Voting App</h1>
+}
+</style>
+
+</head>
+<body>
+  <header class="bg-black p-5 sticky">
+    <div class="flex">
+      <div class="inline-block">
+       <a href="/">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="inline-block stroke-white w-8 ">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 6.878V6a2.25 2.25 0 012.25-2.25h7.5A2.25 2.25 0 0118 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 004.5 9v.878m13.5-3A2.25 2.25 0 0119.5 9v.878m0 0a2.246 2.246 0 00-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0121 12v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6c0-.98.626-1.813 1.5-2.122" />
+          </svg>
+       </a>
+      </div>
+      <div class=" text-center mx-auto ">
+        <h1 class="text-2xl font-semibold text-white text-center inline-block">My Voting App</h1>          </div>
+      <%if(admin !=null){%>
+     <div class="inline-block">
+      <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="text-white bg-black-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center  dark:hover:bg-green-700 dark:focus:ring-green-800" type="button"><%=admin.firstName%> <%=admin.lastName%> <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></button>
+      <!-- Dropdown menu -->
+      <div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded shadow w-44 dark:bg-gray-700">
+          <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
+            <li>
+              <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">My Profile</a>
+            </li>
+            <li>
+              <a href="/signout" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">Sign out</a>
+            </li>
+          </ul>
+      </div>
+     </div>
+
+        
+          <%}%>
+    
+    </div>
+    
+
+    
+  </header>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.1/flowbite.min.js"></script>
+
+</body>
+</html>
+ 
