--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,23 +7,25 @@
     <meta name="csrf-token" content="<%= csrfToken %>" />
     <title><%=title%></title>
     <script src="https://cdn.tailwindcss.com"></script>
-  </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  </head>
   <body>
-    <div class="grid grid-cols-6 pt-5">
-        <div class="col-start-2 col-span-2">
-
-      <%- include('header.ejs')%>
-      <div>
-        <p class="py-2">Welcome to the Voting Manager</p>
-        <p class="py-2">
-          New here? <a href="/signup" class="text-green-600">Sign-up now</a>
-        </p>
-        <p class="py-2">
-          Already have an account?
-          <a href="/login" class="text-green-600">Sign-In</a>
-        </p>
-      </div>
-      </div>
+    <main class="m-8 " style="background-color: #6c6c7f24; height:90vh;">
+     <%-include('header.ejs',{admin:null})%>
+    
+      <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style="width: 500px; margin-top: 30px; height: 70%; width: 45%;">
+        <div class="mx-auto flex items-center flex-col	mt-5 ">
+          <p class="py-2 text-2xl font-bold">Welcome to the Voting Manager</p>
+          <p class="py-2 text-xl">
+            New here? <a href="/signup" class="text-green-600 font-bold">Sign-Up</a>
+          </p>
+          <p class="py-2 text-xl">
+            Already have an account?
+            <a href="/go" class="text-green-600 font-bold">Sign-In</a>
+          </p>
+        </div>
+       
     </div>
+    </main>
+   
   </body>
 </html>
