--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -1,1 +1,42 @@
-<p>this is vote</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="csrf-token" content="<%= csrfToken %>" />
+    <title><%=title%></title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content")
+      function updateElection(id){
+         // let compelete = false
+          fetch(`/elections/${id}/launch`,{
+              method:'put',
+              headers:{"Content-Type":"application/json"},
+              body:JSON.stringify({
+                  _csrf:token
+              })
+          }).then((res)=>{
+              if(res.ok){
+                  window.location.reload();
+              }
+          }).catch((err)=>console.log(err))
+      }
+      console.log(window.location.pathname)
+      </script>
+  </head>
+  <body>
+    <main class=" h-screen" style="background-color: #6c6c7f24; ">
+      <%-include('header.ejs',{admin:admin})%>
+        <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
+          style=" margin: 30px auto; height: 75%; width: 65%;">
+          <div class="mx-auto">
+   <h1>ji</h1>
+      </div>
+    </div>
+    </div>
+    </main>
+
+  </body>
+</html>
