--- a/views/voteLogin.ejs
+++ b/views/voteLogin.ejs
@@ -13,13 +13,13 @@
         <%- include('header.ejs',{admin:null})%>
         <div class="sm:container mx-auto p-8 bg-white shadow-lg rounded-md" style="width: 500px; margin-top: 30px; height: 70%; width: 500px;">
             <div class="mx-auto flex  flex-col	mt-5 ">
-                <h6 class="py-3 text-center text-2xl font-bold text-green-600">Sign In</h6>
-                <form action="/admins/login" method="post">
+                <h6 class="py-3 text-center text-2xl font-bold text-green-600">Vote</h6>
+                <form action="/session" method="post">
                     <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
                    
                    <div class="py-3">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
+                    <label for="voter_Id">voter_Id</label>
+                    <input type="voter_Id" name="voter_Id" class="border border-gray-300 text-gray-900 rounded p-2 w-full mt-2"/>
                    </div>
                    <div class="py-3"> 
                     <label for="password">Password</label>
@@ -30,9 +30,7 @@
                    </div>
                     
                 </form>
-                <p class="py-2 ">
-                    New here? <a href="/signup" class="text-green-600 font-bold">Sign-Up</a>
-                  </p>
+                
                 <%-include("errorMsg.ejs")%>
             </div>
            
