--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
           </p>
           <p class="py-2 text-xl">
             Already have an account?
-            <a href="/go" class="text-green-600 font-bold">Sign-In</a>
+            <a href="/login" class="text-green-600 font-bold">Sign-In</a>
           </p>
         </div>
        
@@ -29,3 +29,4 @@
    
   </body>
 </html>
+
