--- a/views/questionDetailsPage.ejs
+++ b/views/questionDetailsPage.ejs
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="csrf-token" content="<%= csrfToken %>" />
-    <title><%=title%></title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <div class="grid grid-cols-6 pt-5 mt-5">
-        <div class="col-start-2 col-span-2">
-          <%
-          var data=[
-    {label:"Home",url:"/elections",current:false},
-    {label:`${election.title}`,url:`/elections/${election.id}`,current:false},
-    {label:`Question #${question.id}`,url:`/questions/${question.id}`,current:true},
-    ]
-          %>
-          <%- include('navigation.ejs',{data:data})%>
-      <div>
-        <p class="text-2xl font-bold text-gray-600"><%=question.title%></p>
-       
-        <div>
-          <% if(answers.length > 0){%>
-            <p>You have created <%=answers.length%> answers</p>
-            <%}%>
-         </div>
-       <form method="post" action="/answers/createAnswers">
-        <input type="hidden" name="_csrf" value="<%=csrfToken%>"/>
-        <input type="hidden" name="questionId" value="<%=question.id%>"/>
 
-        <div class="p-3">
-            <input type="text" name="content" class="border border-gray-300 text-gray-900 rounded p-2 " placeholder="Answer"/>
-            <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 mt-5">Add</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="csrf-token" content="<%= csrfToken %>" />
+  <title>
+    <%=title%>
+  </title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
 
+<body>
+  <main class=" h-screen" style="background-color: #6c6c7f24; ">
+    <%-include('header.ejs',{admin:admin})%>
+      <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
+        style=" margin: 30px auto; height: 75%; width: 65%;">
+        <div class="mx-auto">
+          <% var data=[ {label:"Home",url:"/elections",current:false},
+            {label:`${election.title}`,url:`/elections/${election.id}`,current:false}, {label:`Question
+            #${question.id}`,url:`/questions/${question.id}`,current:true}, ] %>
+            <%- include('navigation.ejs',{data:data})%>
+              <div>
+                <p class="text-2xl font-bold text-gray-600">
+                  <%=question.title%>
+                </p>
+
+                <div>
+                  <% if(answers.length> 0){%>
+                    <p>You have created <%=answers.length%> answers</p>
+                    <%}%>
+                </div>
+                <form method="post" action="/answers/createAnswers">
+                  <input type="hidden" name="_csrf" value="<%=csrfToken%>" />
+                  <input type="hidden" name="questionId" value="<%=question.id%>" />
+
+                  <div class="p-3">
+                    <input type="text" name="content" class="border border-gray-300 text-gray-900 rounded p-2 "
+                      placeholder="Answer" />
+                    <button type="submit"
+                      class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2 mt-5">Add</button>
+
+                  </div>
+                </form>
+              </div>
+              <div>
+                <p class="text-xl font-bold">Answer Options</p>
+                <ul class="list-disc">
+                  <%for(var i=0;i<answers.length;i++){%>
+                    <li class="text-blue-600 ml-5">
+                      <%=answers[i].content%>
+                    </li>
+                    <%}%>
+                </ul>
+
+              </div>
         </div>
-    </form>      </div>
-    <div>
-      <p class="text-xl font-bold">Answer Options</p>
-     <ul class="list-disc">
-      <%for(var i=0;i<answers.length;i++){%>
-        <li class="text-blue-600 ml-5"><%=answers[i].content%></li>
-        <%}%>     </ul>
-
-     </div>
       </div>
-    </div>
-  </body>
-</html>
 
+      </div>
+      </div>
+</body>
+
+</html>
