--- a/views/createElections.ejs
+++ b/views/createElections.ejs
@@ -8,7 +8,12 @@
     <title><%=title%></title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+<style>
+  body{
+  font-family: 'Jost', sans-serif;
 
+}
+</style>
   <body>
     <main class=" h-screen" style="background-color: #6c6c7f24; ">
       <%-include('header.ejs',{admin:admin})%>
