--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="csrf-token" content="<%= csrfToken %>" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
+
   <title>
     <%=title%>
   </title>
@@ -14,7 +18,10 @@
     tr:nth-child(even) {
       background: rgb(204 204 204 / 20%);
     }
+body{
+  font-family: 'Jost', sans-serif;
 
+}
     tr:hover {
       background: #c2c2c278;
     }
@@ -53,7 +60,7 @@
 </head>
 
 <body>
-  <main class=" h-full pb-5" style="background-color: #6c6c7f24; ">
+  <main class=" h-screen pb-5" style="background-color: #6c6c7f24; ">
     <%-include('header.ejs',{admin:admin})%>
       <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
         style=" margin: 30px auto; height: 75%; width: 75%;">
@@ -61,42 +68,42 @@
           <% var data=[ {label:"Home",url:"/elections",current:true} ] %>
             <%- include('navigation.ejs',{data:data})%>
               <div class="flex justify-between">
-                <p class="py-2 text-2xl font-bold text-gray-500">Welcome <%=admin.firstName%>
+                <p class="py-2 text-2xl font-bold text-gray-600">Welcome <%=admin.firstName%>
                     <%=admin.lastName%>
                 </p>
                 <div class="p-2 bg-green-600 rounded hover:bg-green-500">
-                  <a href="/elections/createElections/new" class="text-white">Create new election</a>
+                  <a href="/elections/createElections/new" class="text-white text-lg">Create new election</a>
                 </div>
 
               </div>
               <div>
                 <%if(elections.length==0){%>
-                  <p class="text-lg">You haven't created any elections</p>
+                  <p class="text-lg text-gray-500">You haven't created any elections</p>
                   <%}%>
                     <%if(elections.length> 0){%>
-                      <p class="text-lg">You have created <%=elections.length%> elections</p>
+                      <p class="text-lg text-gray-500">You have created <%=elections.length%> elections</p>
                       <%}%>
 
               </div>
               <%if(elections.length> 0){%>
-                <table class="text-left w-full mt-5">
+                <table class="text-left w-full mt-5 overflow-y-scroll" >
                   <thead class="bg-black flex text-white w-full" style="background-color: black;">
                     <tr class="flex w-full mb-4">
-                      <th class='px-4 py-2 w-1/4 text'>No.</th>
-                      <th class='px-4 py-2 w-1/3 '>Election Name</th>
-                      <th class='px-4 py-2 w-1/4'>Actions</th>
+                      <th class='px-4 py-2 w-1/4 text text-lg'>No.</th>
+                      <th class='px-4 py-2 w-1/3 text-lg'>Election Name</th>
+                      <th class='px-4 py-2 w-1/4 text-lg'>Actions</th>
                     </tr>
                   </thead>
                   <!-- Remove the nasty inline CSS fixed height on production and replace it with a CSS class — this is just for demonstration purposes! -->
-                  <tbody class="bg-grey-light flex flex-col items-center justify-between overflow-y-scroll w-full"
-                    style="height: 50vh;">
+                  <tbody class="bg-grey-light flex flex-col items-center justify-between overflow-y-auto w-full"
+                  style="height: 40vh;" >
                     <%for(var i=0;i<elections.length;i++){%>
 
                       <tr class="flex w-full mb-4">
-                        <td class="p-4 w-1/4">
+                        <td class="p-4 w-1/4 text-lg">
                           <%=i+1%>
                         </td>
-                        <td class="p-4 w-1/3">
+                        <td class="p-4 w-1/3 text-lg">
                           <a href="/elections/<%=elections[i].id%>" class="text-blue-600 ">
                             <%=elections[i].title%>
                           </a>
@@ -186,14 +193,14 @@
                           <form class="space-y-6" action="#">
                             <div>
                               <label for="title"
-                                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Title</label>
+                                class="block mb-2 text-md font-medium text-gray-900 dark:text-white">Title</label>
                               <input type="text" name="title" id="title"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                                 placeholder="name@company.com" required>
                             </div>
 
                             <button type="submit"
-                              class="w-full text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Submit</button>
+                              class="w-full text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-md px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Submit</button>
 
                           </form>
                         </div>
