--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -28,15 +28,18 @@
   </head>
   <body>
     <main class=" h-screen" style="background-color: #6c6c7f24; ">
-      <%-include('header.ejs',{admin:admin})%>
+      <%-include('header.ejs',{admin:null})%>
         <div class="  sm:container mx-auto p-10 bg-white shadow-lg rounded-md "
           style=" margin: 30px auto; height: 75%; width: 65%;">
           <div class="mx-auto">
-   <h1>ji</h1>
+   <h1><%=election.title%></h1>
+
+
+
       </div>
     </div>
     </div>
     </main>
-
+    
   </body>
 </html>
